buildscript {
    ext {
        springBootVersion = "3.2.1"
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

subprojects {
    group = 'fc.be'

    apply {
        plugin 'java'
        plugin 'java-library'
        plugin 'org.springframework.boot'
        plugin 'io.spring.dependency-management'
    }

    sourceCompatibility = '21'

    repositories {
        mavenCentral()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:+"
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        // lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // test
        testImplementation platform('org.junit:junit-bom:5.9.1')
        testImplementation 'org.junit.jupiter:junit-jupiter'

        // yml 설정파일 가져오도록 도와줌
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

        // jackson LocalDateTime mapping 용 플러그인
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:+'


        implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    }

    test {
        useJUnitPlatform()
    }
}

